# TUI.inhouse

./: .gitattributes  .gitignore  2026-06-22_0930_init_olivia_folders.md  AGENTS.md  AWESOME_LAUNCHER_OF_TUIDOOM.py  CHANGELOG.md  CURRENT-STATE.md  FOLDER-HYGIENE.md  FOLDER-STANDARDS.md  GROKBUILDCLI_REVIEW_AND_MINIMAL_TUI_PLAN.md  HOMEBREW-NOTES.md  LAUNCHERCONFIG.JSON  MANIFEST.in  OLIVIAPLEASEREADTHIS.md  Olivia says read this.md  Olivia-pleasereadthis.markdown  PHILOSOPHY.md  QUICKSTART.md  README.md  SHALLOW-MANIFEST.md  STANDALONE.md  SUMMARY.md  TEXTUAL_TCSS_GUTTER_MODE_AND_STARTER_TEMPLATE.md  TODO.md  TUI_Launcher_Planning.md  TUI_MENU_RESEARCH_COPYABLE_EXAMPLES.md  WISHLIST.md  brainstorming-2026-06-29-TUI-design-brainstorm.md  grok build cli_review_and_minimal_tui_plan.md  grok_tui.tcss  grok_tui_design_principles.md  install.ps1  install.sh  launcher.py  minimal_tui.py  pyproject.toml  requirements.txt  ruff.toml  run.cmd  stale_old_plan_v9992.md  (+3 more)
CONCEPTSS/: grok_tui_implementation_walkthrough.md  textual_main_app_schema.py
Grok-TUI-Project/: grok_build_7_phases.json  manifest.json
WISHLIST/: 2026-06-22_mine_sessions_for_chat.skills_crash_fix_committed.md
assets/: README.md  SHALLOW-MANIFEST.md
connectors/: SHALLOW-MANIFEST.md  add-connector.md  monorepo.md
docs/: 2026-07-13-drive-ingest-and-agent-org.md  API.md  ARCHITECTURE.md  DISTRIBUTION.md  DOC-INDEX.md  DOCUMENTATION-STANDARDS.md  HARNESS-CONTRACT.md  LINTING-STANDARDS.md  PR-01-one-line-bootstrap.md  PR-02-error-recon.md  PR-03-launch-error-logs.md  PR-04-layout-chrome.md  PR-05-six-panel-gallery.md  PR-06-ansi-effects.md  PR-07-strong-documentation.md  PR-08-docstrings.md  PR-09-test-harness.md  PR-10-distribution-wheel.md  PR-11-menu-system-md-html.md  PR-12-screen-gui-layout.md  PR-13-output-windows.md  PR-14-sample-scripts.md  PR-15-demo-zip-integration.md  PR-ROADMAP.md  README.md  TESTING.md  (+1 more)
(+82 files in other folders)
